--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chat App</title>
-    <link rel="stylesheet" href="/css/styles.min.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
     <link rel="icon" href="/img/favicon.png" />
   </head>
   <body>
@@ -19,6 +19,7 @@
           <button>Join</button>
         </form>
       </div>
+      <div class="containerid">Proccessed by container ID: <br>{{containerId}}</br></div>
     </div>
   </body>
 </html>
